--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title></title>
   </head>
   <body>
-    <h1> Welcome to Eclipse Repo. </h1>
-    <p>The eclipse sings a pretty symphony in your mind.</p>
+    <h1> Welcome to Sakura Repo </h1>
+    <p>Your Sanctuary of Tweaks.</p>
   </body>
 </html>
