--- a/index.html
+++ b/index.html
@@ -2,10 +2,26 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <title>🌸 Sakura Repo 🌙</title>
+    <link rel="stylesheet" href="css/master.css">
   </head>
   <body>
-    <h1> Welcome to Sakura Repo </h1>
-    <p>Your Sanctuary of Tweaks.</p>
+
+<div class="login-box">
+  <img class="avatar" src="img/avatar.png" alt="Logo PP">
+  <h2>🌸  Sakura Repository  🌸</h2>
+  <h1>Welcome to the sanctuary of tweaks.</h1>
+    <h1>Add this repo</h1>
+  <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://f34rlessra1n.github.io"class="cydia">Cydia</a>
+  <br>
+  <br>
+  <a href="installer://add/repo=https://f34rlessra1n.github.io"class="installer">Installer</a>
+  <br>
+  <br>
+  <a href="sileo://source/https://profejuantonio.github.io"class="sileo">Sileo</a>
+  <br>
+  <br>
+</div>
   </body>
 </html>
