--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://f34rlessra1n.github.io"class="cydia">Cydia</a>
   <br>
   <br>
-  <a href="installer://add/repo=f34rlessra1n.github.io"class="installer">Installer</a>
+  <a href="installer://add/f34rlessra1n.github.io"class="installer">Installer</a>
   <br>
   <br>
   <a href="sileo://source/https://profejuantonio.github.io"class="sileo">Sileo</a>
