--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <a href="installer://add/f34rlessra1n.github.io"class="installer">Installer</a>
   <br>
   <br>
-  <a href="sileo://source/https://profejuantonio.github.io"class="sileo">Sileo</a>
+  <a href="sileo://source/https://f34rlessra1n.github.io"class="sileo">Sileo</a>
   <br>
   <br>
 </div>
